add back to top

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 </head>
 
 <body>
-
     <!-- header section starts  -->
-
     <header>
 
         <div id="menu-bars" class="fas fa-bars"></div>
@@ -293,26 +291,12 @@
         </div>
 
     </section>
-
+    <button onclick="topFunction()" id="myBtn" title="Trở về đầu trang"><i
+            class="fa-sharp fa-solid fa-arrow-up"></i></button>
     <!-- contact section ends -->
 
     <!-- footer section  -->
-
     <div class="footer"> created by <span> SHTeam </span> | all rights reserved </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- javascript part  -->
 
     <!-- typed.js link  -->
@@ -347,7 +331,27 @@
         });
 
     </script>
+    <script>
+        // Get the button
+        let mybutton = document.getElementById("myBtn");
 
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
 </body>
 
 </html>
